# codex-assist

./: .gitignore  README.md  ROADMAP.md  ROADMAP2.md  console_widget.py  context.py  events.py  logging_bus.py  main.py  openai_helper.py  persistence.py  pyproject.toml  requirements.txt  state.py  tokens.py  ui.py  utils.py
archive/v1.01/: main.py
context_engine/: README.md  __init__.py  cli.py  embeddings.py  engine.py  extractors.py  models.py  reducers.py  retrieval.py  store.py  tokens.py
docs/: CHANGELOG.md
logic/: context_manager.py  conversation.py  file_generator.py  project_manager.py  prompt_builder.py  turn_summary.py
services/: openai_helper.py
test-docs/test-folder/: project-name.txt
tests/: test_engine.py  test_reducers.py  test_retrieval.py
ui/: events.py  layout.py  settings_panel.py  status_bar.py
ui/tabs/: files_tab.py  history_tab.py  response_tab.py
